--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
@@ -5,5 +5,9 @@
     <link>https://www.erikjanwestendorp.nl</link>
   </creator>
   <area alias="default">
+    <key alias="node">Node</key>
+    <key alias="comment">Comment</key>
+    <key alias="relationType">Relation Type</key>
+    <key alias="deleteAllowed">Delete allowed</key>
   </area>
 </language>
