--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
@@ -9,5 +9,6 @@
     <key alias="comment">Comment</key>
     <key alias="relationType">Relation Type</key>
     <key alias="deleteAllowed">Delete allowed</key>
+    <key alias="noRelations">No relations found for this page</key>
   </area>
 </language>
