Add delete overlay and ask for confirmation

--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
@@ -12,5 +12,6 @@
     <key alias="delete">Delete</key>
     <key alias="noRelations">No relations found for this page</key>
     <key alias="createDate">Create Date</key>
+    <key alias="relationDeleteWarning">This will delete the relation with </key>
   </area>
 </language>
