--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/lang/en-US.xml
@@ -1,17 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language alias="en_us" intName="English (US)" localName="English (US)" lcid="" culture="en-US">
-  <creator>
-    <name>Erik-Jan Westendorp</name>
-    <link>https://www.erikjanwestendorp.nl</link>
-  </creator>
-  <area alias="default">
-    <key alias="node">Node</key>
-    <key alias="comment">Comment</key>
-    <key alias="relationType">Relation Type</key>
-    <key alias="deleteAllowed">Delete allowed</key>
-    <key alias="delete">Delete</key>
-    <key alias="noRelations">No relations found for this page</key>
-    <key alias="createDate">Create Date</key>
-    <key alias="relationDeleteWarning">This will delete the relation with </key>
-  </area>
+	<creator>
+		<name>Erik-Jan Westendorp</name>
+		<link>https://www.erikjanwestendorp.nl</link>
+	</creator>
+	<area alias="default">
+		<key alias="node">Node</key>
+		<key alias="comment">Comment</key>
+		<key alias="relationType">Relation Type</key>
+		<key alias="deleteAllowed">Delete allowed</key>
+		<key alias="delete">Delete</key>
+		<key alias="noRelations">No relations found for this page</key>
+		<key alias="createDate">Create Date</key>
+		<key alias="relationDeleteWarning">This will delete the relation with </key>
+	</area>
+	<area alias="contentRelationsMessages">
+		<key alias="deleteNotAllowedCategory">Not allowed</key>
+		<key alias="deleteNotAllowedMessage">Content can not deleted because it's related to another content item</key>
+	</area>
 </language>
