--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/lang/en-US.xml
@@ -4,6 +4,9 @@
 		<name>Erik-Jan Westendorp</name>
 		<link>https://www.erikjanwestendorp.nl</link>
 	</creator>
+	<area alias="treeHeaders">
+		<key alias="thirdParty">Third party</key>
+	</area>
 	<area alias="default">
 		<key alias="node">Node</key>
 		<key alias="comment">Comment</key>
