Add DeletePermissions box in settings dashboard

--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/lang/en-US.xml
@@ -19,6 +19,7 @@
 	</area>
 	<area alias="contentRelationsPermissions">
 		<key alias="headerText">Permissions</key>
+		<key alias="deletePermission">Delete permissions</key>
 	</area>
 	<area alias="contentRelationsMessages">
 		<key alias="deleteNotAllowedCategory">Not allowed</key>
