--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/lang/en-US.xml
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/lang/en-US.xml
@@ -13,6 +13,7 @@
 		<key alias="relationType">Relation Type</key>
 		<key alias="deleteAllowed">Delete allowed</key>
 		<key alias="delete">Delete</key>
+		<key alias="addRelation">Add Relation</key>
 		<key alias="noRelations">No relations found for this page</key>
 		<key alias="createDate">Create Date</key>
 		<key alias="relationDeleteWarning">This will delete the relation with </key>
